# AIAgentsData

./: .gitignore  AGENT_SEMANTIC_QUERY_SPEC.md  AGENT_SQL_GUIDE.md  AGENT_SQL_SEMANTIC_GUIDE.md  README.md  pyproject.toml  semanticQuery.ipynb  semantic_model.yaml
scripts/: qa_check.sh
semgrep-rules/: no-egress.yml
src/datamart/: __init__.py  db.py  main.py  qa.py  semantic.py  simulator.py  warehouse.py
tests/: test_datamart.py
